--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,6 @@ jobs:
           build_exploit.bat THAW
         shell: cmd
       - name: Upload
-        uses: actions/upload-artifact
+        uses: actions/upload-artifact@v4
         with:
           path: bin/RETAIL_BUILD/*
